crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud-arrow_clickbench_q43_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q43"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                           |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                                     |
|               |   Sort: date_trunc(Utf8("minute"), M) ASC NULLS LAST, fetch=1010                                                                                                                                                                                                                                                                               |
|               |     Projection: date_trunc(Utf8("minute"),to_timestamp(hits.EventTime)) AS M, count(Int64(1)) AS PageViews                                                                                                                                                                                                                                     |
|               |       Aggregate: groupBy=[[date_trunc(Utf8("minute"), CAST(to_timestamp(hits.EventTime) AS Timestamp(ns)))]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                         |
|               |         Projection: hits.EventTime                                                                                                                                                                                                                                                                                                             |
|               |           Filter: hits.CounterID = Int32(62) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1373760000000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1373846400000000000, None) AND hits.IsRefresh = Int16(0) AND hits.DontCountHits = Int16(0) |
|               |             TableScan: hits projection=[EventTime, EventDate, CounterID, IsRefresh, DontCountHits]                                                                                                                                                                                                                                             |
| physical_plan | GlobalLimitExec: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                           |
|               |   SortPreservingMergeExec: [date_trunc(minute, M@0) ASC NULLS LAST], fetch=1010                                                                                                                                                                                                                                                                |
|               |     SortExec: TopK(fetch=1010), expr=[date_trunc(minute, M@0) ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                    |
|               |       ProjectionExec: expr=[date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0 as M, count(Int64(1))@1 as PageViews]                                                                                                                                                                                                                    |
|               |         AggregateExec: mode=FinalPartitioned, gby=[date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0 as date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))], aggr=[count(Int64(1))]                                                                                                                                               |
|               |           RepartitionExec: partitioning=Hash([date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0], 16), input_partitions=16                                                                                                                                                                                                             |
|               |             AggregateExec: mode=Partial, gby=[date_trunc(minute, to_timestamp(EventTime@0)) as date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))], aggr=[count(Int64(1))]                                                                                                                                                                |
|               |               FilterExec: CounterID@2 = 62 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) >= 1373760000000000000 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) <= 1373846400000000000 AND IsRefresh@3 = 0 AND DontCountHits@4 = 0, projection=[EventTime@0]                                                                       |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                           |
|               |                     DataSourceExec: partitions=16, partition_sizes=[1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1587, 7343]                                                                                                                                                                            |
|               |                                                                                                                                                                                                                                                                                                                                                |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
