crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud-arrow_clickbench_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                      |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[avg(CAST(hits.UserID AS Float64))]]                                                                                       |
|               |   TableScan: hits projection=[UserID]                                                                                                                     |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[avg(hits.UserID)]                                                                                                |
|               |   CoalescePartitionsExec                                                                                                                                  |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[avg(hits.UserID)]                                                                                          |
|               |       SchemaCastScanExec                                                                                                                                  |
|               |         BytesProcessedExec                                                                                                                                |
|               |           DataSourceExec: partitions=16, partition_sizes=[1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1587, 7343] |
|               |                                                                                                                                                           |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
